Project

General

Profile

Actions

Bug #42346

closed

Nearfull warnings are incorrect

Added by Anonymous over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
High
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

OSD_NEARFULL 2 nearfull osd(s)
osd.53 is near full

53 hdd 9.09470 1.00000 9.1 TiB 1.3 GiB 287 MiB 0 B 1 GiB 9.1 TiB 0.01 0 0 up

OSD53 got purged and formatted and readded to cluster.


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #43246: nautilus: Nearfull warnings are incorrectResolvedDavid ZafmanActions
Actions #1

Updated by Anonymous over 4 years ago

osd.96 is near full

96 hdd 10.00000 1.00000 9.1 TiB 6.8 TiB 6.8 TiB 84 KiB 17 GiB 2.3 TiB 74.57 1.20 31 up

Actions #2

Updated by Sebastian Wagner over 4 years ago

Could you add some more explanation to this issue?

  • Which commands did you run?
  • What was wrong`
  • What did you expect instead?
Actions #3

Updated by Anonymous over 4 years ago

I dont expect to see nearfull warnings if they are not over threshold.
Commands run: I see this every time there is a rebalance, and others see, it's a common thing asked in IRC channel.
Certainly dont expect to see a near-full warning for an OSD that's empty ;)?

Actions #4

Updated by Neha Ojha over 4 years ago

  • Project changed from mgr to RADOS
Actions #5

Updated by Sage Weil over 4 years ago

  • Priority changed from Normal to High
Actions #6

Updated by Neha Ojha over 4 years ago

  • Assignee set to David Zafman
Actions #7

Updated by David Zafman over 4 years ago

  • Status changed from New to In Progress
  • Pull request ID set to 31954

Spurious nearfull warnings caused by backfill reservation mechanism during rebalancing. The nearfull ratio was compared against the backfill reservation adjust space. The fix is to use the actual unadjusted value.

Actions #8

Updated by David Zafman over 4 years ago

  • Backport set to nautilus
Actions #9

Updated by David Zafman over 4 years ago

  • Status changed from In Progress to Pending Backport
Actions #10

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43246: nautilus: Nearfull warnings are incorrect added
Actions #11

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF