osd: Use physical ratio for nearfull (doesn't include backfill resserve)

Fixes: https://tracker.ceph.com/issues/42346

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 146b7f5bc356d39292ed4def5f00f0a79a46a75f)